prevent line break in settings of word match

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -198,6 +198,7 @@ body {
 .game-settings-entry {
   line-height: 1.5rem;
   margin-left: 16px;
+  white-space:nowrap;
 }
 
 
